# ChefMate

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: graph.py  prompts.py  recipe_tool_helpers.py  runtime.py  tool_errors.py  tool_schemas.py  tools.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: semantic_models.py  task_manager.py  workflow.py
backend/app/db/: __init__.py  connection.py  contracts.py
backend/app/domain/: __init__.py  cards.py  enums.py  models.py
backend/app/infra/: __init__.py  logging.py  voice_volcengine.py
backend/app/repositories/: account_repository.py  conversation_repository.py  file_repository.py  recipe_repository.py
backend/app/schemas/: auth.py  conversation.py  file.py  profile.py  recipe.py  task.py  vision.py  voice.py
backend/app/services/: auth_service.py  conversation_service.py  file_service.py  profile_service.py  recipe_catalog_service.py  recipe_service.py  task_service.py  vision_service.py  voice_service.py
backend/app/skills/: cooking.py  preparation.py  recommendation.py  vision.py
backend/app/utils/: recipe_snapshot.py  security.py  time.py
backend/scripts/: test_recommendation.py  test_vision.py
backend/test/: README.md  __init__.py  case_schema.py  cli.py  fixtures.py  harness.py  reporting.py  runner.py
demo/agent/: .env.example  README.md  main.py  pyproject.toml
demo/agent/agent_app/: cli.py  (+10 more)
ml/: README.md  cudatest.py  pyproject.toml
ml/vision/: README.md  __init__.py  cli.py
(+104 files in other folders)
